--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-custom-scroll": "^4.1.5",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-scrollbar": "^0.5.6",
     "sass-lint": "^1.13.1",
     "sass-lint-config-file": "^1.1.0"
   },
@@ -37,6 +40,10 @@
     ]
   },
   "devDependencies": {
-    "prettier": "1.19.1"
-  }
+    "prettier": "^1.19.1"
+  },
+  "main": "index.js",
+  "repository": "https://github.com/kartaiev/jude_site.git",
+  "author": "Volodymyr Kartaiev <kartayev@gmail.com>",
+  "license": "MIT"
 }
