--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react-perfect-scrollbar": "^1.5.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-scroll-into-view-if-needed": "^2.1.7",
+    "react-scroll-to": "^3.0.0-beta.3",
     "react-scrollbar": "^0.5.6",
     "sass-lint": "^1.13.1",
-    "sass-lint-config-file": "^1.1.0"
+    "sass-lint-config-file": "^1.1.0",
+    "scroll-into-view-if-needed": "^2.2.20"
   },
   "scripts": {
     "start": "react-scripts start",
